Resource wizard tooltip texts

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -543,25 +543,25 @@ TextField.universal.placeholder=Insert value
 MultiValueField.nameNotSpecified=(Name not specified)
 
 #Resourse Wizard Tooltips. TODO - define proper tooltip texts
-SchemaHandlingStep.mapping.tooltip.authoritative=Tooltip
-SchemaHandlingStep.mapping.tooltip.exclusive=Tooltip
-SchemaHandlingStep.mapping.tooltip.strength=Tooltip
-SchemaHandlingStep.mapping.tooltip.channel=Tooltip
-SchemaHandlingStep.mapping.tooltip.exceptChannel=Tooltip
-SchemaHandlingStep.mapping.tooltip.source=Tooltip
-SchemaHandlingStep.mapping.tooltip.target=Tooltip
-SchemaHandlingStep.mapping.tooltip.expressionType=Tooltip
-SchemaHandlingStep.mapping.tooltip.expressionLanguage=Tooltip
-SchemaHandlingStep.mapping.tooltip.expressionValuePolicyRef=Tooltip
-SchemaHandlingStep.mapping.tooltip.expression=Tooltip
-SchemaHandlingStep.mapping.tooltip.conditionType=Tooltip
-SchemaHandlingStep.mapping.tooltip.conditionLanguage=Tooltip
-SchemaHandlingStep.mapping.tooltip.conditionValuePolicyRef=Tooltip
-SchemaHandlingStep.mapping.tooltip.condition=Tooltip
+SchemaHandlingStep.mapping.tooltip.authoritative=Authoritative mappings both add are remove specified value. Non-authoritative mappings only add the value. E.g. if a role with an authoritative mapping is removed the value that the mapping implied is also removed. If a role with non-authoritative mapping is removed then the value remains.
+SchemaHandlingStep.mapping.tooltip.exclusive=Exclusive mapping can be the only mapping that produces a value for a specific target. E.g. if another mapping produces a value for the same attribute then it ends up with an error.
+SchemaHandlingStep.mapping.tooltip.strength=The strength with which the mapping is applied. Weak mappings are only applied if there is no value in the target yet. Normal mappings are applied only if the source has been changed. Strong mappings are applied allways.
+SchemaHandlingStep.mapping.tooltip.channel=The mapping will only be applied when processing a change from the specified channel (e.g. from live synchronization, reconciliation, import, ...)
+SchemaHandlingStep.mapping.tooltip.exceptChannel=The mapping will be applied for all channels except for the specified channel.
+SchemaHandlingStep.mapping.tooltip.source=Mappping source. Mapping will react to changes in its sources. The values of the sources are input parameters to the expression inside the mapping.
+SchemaHandlingStep.mapping.tooltip.target=Mapping target. The value that the mapping produces will be applied to the mapping target.
+SchemaHandlingStep.mapping.tooltip.expressionType=The type of expression used in this mapping. If no expression is specified the "asIs" expression will be used.
+SchemaHandlingStep.mapping.tooltip.expressionLanguage=Programming language in which is the expression script written.
+SchemaHandlingStep.mapping.tooltip.expressionValuePolicyRef=Reference to a value policy object. The specified value policy will be used as a template to generate a value. If no value policy reference is specified then a default policy is determined automatically. E.g. appropriate password policy applicable to the mapping target will be used.
+SchemaHandlingStep.mapping.tooltip.expression=Tooltip TODO
+SchemaHandlingStep.mapping.tooltip.conditionType=Type of the expression that will be used for the mapping condition.
+SchemaHandlingStep.mapping.tooltip.conditionLanguage=Programming language in which is the condition script written.
+SchemaHandlingStep.mapping.tooltip.conditionValuePolicyRef=Reference to a value policy object. The specified value policy will be used as a template to generate a value. If no value policy reference is specified then a default policy is determined automatically. E.g. appropriate password policy applicable to the mapping target will be used.
+SchemaHandlingStep.mapping.tooltip.condition=Tooltip TODO
 
-SchemaHandlingStep.limitations.tooltip.minOccurs=Tooltip
-SchemaHandlingStep.limitations.tooltip.maxOccurs=Tooltip
-SchemaHandlingStep.limitations.tooltip.ignore=Tooltip
+SchemaHandlingStep.limitations.tooltip.minOccurs=Minimum number of occurences of the attribute. A value of zero means optional attribute, value of one means mandatory attribute. A value which is specified here overrides the value taken from resource schema.
+SchemaHandlingStep.limitations.tooltip.maxOccurs=Maximum number of occurences of the attribute. A of one means single-value attribute, value of "unbounded" means multi-value attribute. A value which is specified here overrides the value taken from resource schema.
+SchemaHandlingStep.limitations.tooltip.ignore=Flag to ignore an attribute. MidPoint will pretend that the ignored attribute does not exist at all. It will not display it in the user interface, will not apply mappings, etc. 
 
 SynchronizationStep.action.tooltip.handlerUri=Tooltip
 SynchronizationStep.action.tooltip.order=Tooltip
