--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/WizardStep.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/WizardStep.properties
@@ -17,142 +17,142 @@
 WizardStep.title=
 SchemaHandlingStep.message.validationError=Inserted objectClass value: '{0}' is not valid. Please provide valid objectClass value.
 
-SchemaStep.tooltip.kind=Tooltip
-SchemaStep.tooltip.intent=Tooltip
-SchemaStep.tooltip.nativeObjectClass=Tooltip
-SchemaStep.tooltip.isDefault=Tooltip
-SchemaStep.tooltip.isKindDefault=Tooltip
+SchemaStep.tooltip.kind=TODO: SchemaStep.tooltip.kind
+SchemaStep.tooltip.intent=TODO: SchemaStep.tooltip.intent
+SchemaStep.tooltip.nativeObjectClass=TODO: SchemaStep.tooltip.nativeObjectClass
+SchemaStep.tooltip.isDefault=TODO: SchemaStep.tooltip.isDefault
+SchemaStep.tooltip.isKindDefault=TODO: SchemaStep.tooltip.isKindDefault
 
-SchemaHandlingStep.tooltip.kind=Tooltip
-SchemaHandlingStep.tooltip.intent=Tooltip
-SchemaHandlingStep.tooltip.default=Tooltip
-SchemaHandlingStep.tooltip.dependency=Tooltip
-SchemaHandlingStep.tooltip.objectClass=Tooltip
-SchemaHandlingStep.tooltip.attributes=Tooltip
-SchemaHandlingStep.tooltip.associations=Tooltip
-SchemaHandlingStep.tooltip.assignmentPolicyRef=Tooltip
-SchemaHandlingStep.tooltip.iteration=Tooltip
-SchemaHandlingStep.tooltip.protected=Tooltip
-SchemaHandlingStep.tooltip.activation=Tooltip
-SchemaHandlingStep.tooltip.credentials=Tooltip
+SchemaHandlingStep.tooltip.kind=TODO: SchemaHandlingStep.tooltip.kind
+SchemaHandlingStep.tooltip.intent=TODO: SchemaHandlingStep.tooltip.intent
+SchemaHandlingStep.tooltip.default=TODO: SchemaHandlingStep.tooltip.default
+SchemaHandlingStep.tooltip.dependency=TODO: SchemaHandlingStep.tooltip.dependency
+SchemaHandlingStep.tooltip.objectClass=TODO: SchemaHandlingStep.tooltip.objectClass
+SchemaHandlingStep.tooltip.attributes=TODO: SchemaHandlingStep.tooltip.attributes
+SchemaHandlingStep.tooltip.associations=TODO: SchemaHandlingStep.tooltip.associations
+SchemaHandlingStep.tooltip.assignmentPolicyRef=TODO: SchemaHandlingStep.tooltip.assignmentPolicyRef
+SchemaHandlingStep.tooltip.iteration=TODO: SchemaHandlingStep.tooltip.iteration
+SchemaHandlingStep.tooltip.protected=TODO: SchemaHandlingStep.tooltip.protected
+SchemaHandlingStep.tooltip.activation=TODO: SchemaHandlingStep.tooltip.activation
+SchemaHandlingStep.tooltip.credentials=TODO: SchemaHandlingStep.tooltip.credentials
 
-SchemaHandlingStep.dependency.tooltip.order=Tooltip
-SchemaHandlingStep.dependency.tooltip.strictness=Tooltip
-SchemaHandlingStep.dependency.tooltip.kind=Tooltip
-SchemaHandlingStep.dependency.tooltip.intent=Tooltip
-SchemaHandlingStep.dependency.tooltip.resourceRef=Tooltip
+SchemaHandlingStep.dependency.tooltip.order=TODO: SchemaHandlingStep.dependency.tooltip.order
+SchemaHandlingStep.dependency.tooltip.strictness=TODO: SchemaHandlingStep.dependency.tooltip.strictness
+SchemaHandlingStep.dependency.tooltip.kind=TODO: SchemaHandlingStep.dependency.tooltip.kind
+SchemaHandlingStep.dependency.tooltip.intent=TODO: SchemaHandlingStep.dependency.tooltip.intent
+SchemaHandlingStep.dependency.tooltip.resourceRef=TODO: SchemaHandlingStep.dependency.tooltip.resourceRef
 
-SchemaHandlingStep.attribute.tooltip.reference=Tooltip
-SchemaHandlingStep.attribute.tooltip.allow=Tooltip
-SchemaHandlingStep.attribute.tooltip.limitations=Tooltip
-SchemaHandlingStep.attribute.tooltip.exclusiveStrong=Tooltip
-SchemaHandlingStep.attribute.tooltip.tolerant=Tooltip
-SchemaHandlingStep.attribute.tooltip.tolerantVP=Tooltip
-SchemaHandlingStep.attribute.tooltip.intolerantVP=Tooltip
-SchemaHandlingStep.attribute.tooltip.fetchStrategy=Tooltip
-SchemaHandlingStep.attribute.tooltip.matchingRule=Tooltip
-SchemaHandlingStep.attribute.tooltip.outbound=Tooltip
-SchemaHandlingStep.attribute.tooltip.inbound=Tooltip
+SchemaHandlingStep.attribute.tooltip.reference=TODO: SchemaHandlingStep.attribute.tooltip.reference
+SchemaHandlingStep.attribute.tooltip.allow=TODO: SchemaHandlingStep.attribute.tooltip.allow
+SchemaHandlingStep.attribute.tooltip.limitations=TODO: SchemaHandlingStep.attribute.tooltip.limitations
+SchemaHandlingStep.attribute.tooltip.exclusiveStrong=TODO: SchemaHandlingStep.attribute.tooltip.exclusiveStrong
+SchemaHandlingStep.attribute.tooltip.tolerant=TODO: SchemaHandlingStep.attribute.tooltip.tolerant
+SchemaHandlingStep.attribute.tooltip.tolerantVP=TODO: SchemaHandlingStep.attribute.tooltip.tolerantVP
+SchemaHandlingStep.attribute.tooltip.intolerantVP=TODO: SchemaHandlingStep.attribute.tooltip.intolerantVP
+SchemaHandlingStep.attribute.tooltip.fetchStrategy=TODO: SchemaHandlingStep.attribute.tooltip.fetchStrategy
+SchemaHandlingStep.attribute.tooltip.matchingRule=TODO: SchemaHandlingStep.attribute.tooltip.matchingRule
+SchemaHandlingStep.attribute.tooltip.outbound=TODO: SchemaHandlingStep.attribute.tooltip.outbound
+SchemaHandlingStep.attribute.tooltip.inbound=TODO: SchemaHandlingStep.attribute.tooltip.inbound
 
-SchemaHandlingStep.association.tooltip.intent=Tooltip
-SchemaHandlingStep.association.tooltip.direction=Tooltip
-SchemaHandlingStep.association.tooltip.associationAttribute=Tooltip
-SchemaHandlingStep.association.tooltip.valueAttribute=Tooltip
-SchemaHandlingStep.association.tooltip.kind=Tooltip
-SchemaHandlingStep.association.tooltip.explicitRefIntegrity=Tooltip
+SchemaHandlingStep.association.tooltip.intent=TODO: SchemaHandlingStep.association.tooltip.intent
+SchemaHandlingStep.association.tooltip.direction=TODO: SchemaHandlingStep.association.tooltip.direction
+SchemaHandlingStep.association.tooltip.associationAttribute=TODO: SchemaHandlingStep.association.tooltip.associationAttribute
+SchemaHandlingStep.association.tooltip.valueAttribute=TODO: SchemaHandlingStep.association.tooltip.valueAttribute
+SchemaHandlingStep.association.tooltip.kind=TODO: SchemaHandlingStep.association.tooltip.kind
+SchemaHandlingStep.association.tooltip.explicitRefIntegrity=TODO: SchemaHandlingStep.association.tooltip.explicitRefIntegrity
 
-SchemaHandlingStep.iteration.tooltip.maxIteration=Tooltip
-SchemaHandlingStep.iteration.tooltip.variable=Tooltip
-SchemaHandlingStep.iteration.tooltip.returnMultiplicity=Tooltip
+SchemaHandlingStep.iteration.tooltip.maxIteration=TODO: SchemaHandlingStep.iteration.tooltip.maxIteration
+SchemaHandlingStep.iteration.tooltip.variable=TODO: SchemaHandlingStep.iteration.tooltip.variable
+SchemaHandlingStep.iteration.tooltip.returnMultiplicity=TODO: SchemaHandlingStep.iteration.tooltip.returnMultiplicity
 
-SchemaHandlingStep.activation.tooltip.fetchStrategy=Tooltip
-SchemaHandlingStep.activation.tooltip.outbound=Tooltip
-SchemaHandlingStep.activation.tooltip.inbound=Tooltip
+SchemaHandlingStep.activation.tooltip.fetchStrategy=TODO: SchemaHandlingStep.activation.tooltip.fetchStrategy
+SchemaHandlingStep.activation.tooltip.outbound=TODO: SchemaHandlingStep.activation.tooltip.outbound
+SchemaHandlingStep.activation.tooltip.inbound=TODO: SchemaHandlingStep.activation.tooltip.inbound
 
-SchemaHandlingStep.credentials.tooltip.fetchStrategy=Tooltip
-SchemaHandlingStep.credentials.tooltip.outbound=Tooltip
-SchemaHandlingStep.credentials.tooltip.inbound=Tooltip
-SchemaHandlingStep.credentials.tooltip.passwordPolicyRef=Tooltip
+SchemaHandlingStep.credentials.tooltip.fetchStrategy=TODO: SchemaHandlingStep.credentials.tooltip.fetchStrategy
+SchemaHandlingStep.credentials.tooltip.outbound=TODO: SchemaHandlingStep.credentials.tooltip.outbound
+SchemaHandlingStep.credentials.tooltip.inbound=TODO: SchemaHandlingStep.credentials.tooltip.inbound
+SchemaHandlingStep.credentials.tooltip.passwordPolicyRef=TODO: SchemaHandlingStep.credentials.tooltip.passwordPolicyRef
 
-SchemaHandlingStep.protected.tooltip.name=Tooltip
-SchemaHandlingStep.protected.tooltip.uid=Tooltip
-SchemaHandlingStep.protected.tooltip.filter=Tooltip
-SchemaHandlingStep.tooltip.filterClause=Tooltip
+SchemaHandlingStep.protected.tooltip.name=TODO: SchemaHandlingStep.protected.tooltip.name
+SchemaHandlingStep.protected.tooltip.uid=TODO: SchemaHandlingStep.protected.tooltip.uid
+SchemaHandlingStep.protected.tooltip.filter=TODO: SchemaHandlingStep.protected.tooltip.filter
+SchemaHandlingStep.tooltip.filterClause=TODO: SchemaHandlingStep.tooltip.filterClause
 
-SchemaHandlingStep.limitations.tooltip.layers=Tooltip
-SchemaHandlingStep.limitations.tooltip.propertyAccess=Tooltip
-SchemaHandlingStep.limitations.tooltip.other=Tooltip
+SchemaHandlingStep.limitations.tooltip.layers=TODO: SchemaHandlingStep.limitations.tooltip.layers
+SchemaHandlingStep.limitations.tooltip.propertyAccess=TODO: SchemaHandlingStep.limitations.tooltip.propertyAccess
+SchemaHandlingStep.limitations.tooltip.other=TODO: SchemaHandlingStep.limitations.tooltip.other
 
-SchemaHandlingStep.mapping.tooltip.authoritative=Tooltip
-SchemaHandlingStep.mapping.tooltip.exclusive=Tooltip
-SchemaHandlingStep.mapping.tooltip.strength=Tooltip
-SchemaHandlingStep.mapping.tooltip.channel=Tooltip
-SchemaHandlingStep.mapping.tooltip.exceptChannel=Tooltip
-SchemaHandlingStep.mapping.tooltip.source=Tooltip
-SchemaHandlingStep.mapping.tooltip.target=Tooltip
-SchemaHandlingStep.mapping.tooltip.expressionType=Tooltip
-SchemaHandlingStep.mapping.tooltip.expressionLanguage=Tooltip
-SchemaHandlingStep.mapping.tooltip.expressionValuePolicyRef=Tooltip
-SchemaHandlingStep.mapping.tooltip.expression=Tooltip
-SchemaHandlingStep.mapping.tooltip.conditionType=Tooltip
-SchemaHandlingStep.mapping.tooltip.conditionLanguage=Tooltip
-SchemaHandlingStep.mapping.tooltip.conditionValuePolicyRef=Tooltip
-SchemaHandlingStep.mapping.tooltip.condition=Tooltip
+SchemaHandlingStep.mapping.tooltip.authoritative=TODO: SchemaHandlingStep.mapping.tooltip.authoritative
+SchemaHandlingStep.mapping.tooltip.exclusive=TODO: SchemaHandlingStep.mapping.tooltip.exclusive
+SchemaHandlingStep.mapping.tooltip.strength=TODO: SchemaHandlingStep.mapping.tooltip.strength
+SchemaHandlingStep.mapping.tooltip.channel=TODO: SchemaHandlingStep.mapping.tooltip.channel
+SchemaHandlingStep.mapping.tooltip.exceptChannel=TODO: SchemaHandlingStep.mapping.tooltip.exceptChannel
+SchemaHandlingStep.mapping.tooltip.source=TODO: SchemaHandlingStep.mapping.tooltip.source
+SchemaHandlingStep.mapping.tooltip.target=TODO: SchemaHandlingStep.mapping.tooltip.target
+SchemaHandlingStep.mapping.tooltip.expressionType=TODO: SchemaHandlingStep.mapping.tooltip.expressionType
+SchemaHandlingStep.mapping.tooltip.expressionLanguage=TODO: SchemaHandlingStep.mapping.tooltip.expressionLanguage
+SchemaHandlingStep.mapping.tooltip.expressionValuePolicyRef=TODO: SchemaHandlingStep.mapping.tooltip.expressionValuePolicyRef
+SchemaHandlingStep.mapping.tooltip.expression=TODO: SchemaHandlingStep.mapping.tooltip.expression
+SchemaHandlingStep.mapping.tooltip.conditionType=TODO: SchemaHandlingStep.mapping.tooltip.conditionType
+SchemaHandlingStep.mapping.tooltip.conditionLanguage=TODO: SchemaHandlingStep.mapping.tooltip.conditionLanguage
+SchemaHandlingStep.mapping.tooltip.conditionValuePolicyRef=TODO: SchemaHandlingStep.mapping.tooltip.conditionValuePolicyRef
+SchemaHandlingStep.mapping.tooltip.condition=TODO: SchemaHandlingStep.mapping.tooltip.condition
 
-SynchronizationStep.tooltip.kind=Tooltip
-SynchronizationStep.tooltip.intent=Tooltip
-SynchronizationStep.tooltip.objectClass=Tooltip
-SynchronizationStep.tooltip.focus=Tooltip
-SynchronizationStep.tooltip.enabled=Tooltip
-SynchronizationStep.tooltip.condition=Tooltip
-SynchronizationStep.tooltip.confirmation=Tooltip
-SynchronizationStep.tooltip.objectTemplate=Tooltip
-SynchronizationStep.tooltip.reconcile=Tooltip
-SynchronizationStep.tooltip.opportunistic=Tooltip
-SynchronizationStep.tooltip.correlation=Tooltip
-SynchronizationStep.tooltip.reaction=Tooltip
+SynchronizationStep.tooltip.kind=TODO: SynchronizationStep.tooltip.kind
+SynchronizationStep.tooltip.intent=TODO: SynchronizationStep.tooltip.intent
+SynchronizationStep.tooltip.objectClass=TODO: SynchronizationStep.tooltip.objectClass
+SynchronizationStep.tooltip.focus=TODO: SynchronizationStep.tooltip.focus
+SynchronizationStep.tooltip.enabled=TODO: SynchronizationStep.tooltip.enabled
+SynchronizationStep.tooltip.condition=TODO: SynchronizationStep.tooltip.condition
+SynchronizationStep.tooltip.confirmation=TODO: SynchronizationStep.tooltip.confirmation
+SynchronizationStep.tooltip.objectTemplate=TODO: SynchronizationStep.tooltip.objectTemplate
+SynchronizationStep.tooltip.reconcile=TODO: SynchronizationStep.tooltip.reconcile
+SynchronizationStep.tooltip.opportunistic=TODO: SynchronizationStep.tooltip.opportunistic
+SynchronizationStep.tooltip.correlation=TODO: SynchronizationStep.tooltip.correlation
+SynchronizationStep.tooltip.reaction=TODO: SynchronizationStep.tooltip.reaction
 
-SynchronizationStep.reaction.tooltip.situation=Tooltip
-SynchronizationStep.reaction.tooltip.channel=Tooltip
-SynchronizationStep.reaction.tooltip.synchronize=Tooltip
-SynchronizationStep.reaction.tooltip.reconcile=Tooltip
-SynchronizationStep.reaction.tooltip.objectTemplateRef=Tooltip
-SynchronizationStep.reaction.tooltip.action=Tooltip
+SynchronizationStep.reaction.tooltip.situation=TODO: SynchronizationStep.reaction.tooltip.situation
+SynchronizationStep.reaction.tooltip.channel=TODO: SynchronizationStep.reaction.tooltip.channel
+SynchronizationStep.reaction.tooltip.synchronize=TODO: SynchronizationStep.reaction.tooltip.synchronize
+SynchronizationStep.reaction.tooltip.reconcile=TODO: SynchronizationStep.reaction.tooltip.reconcile
+SynchronizationStep.reaction.tooltip.objectTemplateRef=TODO: SynchronizationStep.reaction.tooltip.objectTemplateRef
+SynchronizationStep.reaction.tooltip.action=TODO: SynchronizationStep.reaction.tooltip.action
 
-ResourceWizard.expression.tooltip.type=Tooltip
-ResourceWizard.expression.tooltip.language=Tooltip
-ResourceWizard.expression.tooltip.policyRef=Tooltip
-ResourceWizard.expression.tooltip.expression=Tooltip
+ResourceWizard.expression.tooltip.type=TODO: ResourceWizard.expression.tooltip.type
+ResourceWizard.expression.tooltip.language=TODO: ResourceWizard.expression.tooltip.language
+ResourceWizard.expression.tooltip.policyRef=TODO: ResourceWizard.expression.tooltip.policyRef
+ResourceWizard.expression.tooltip.expression=TODO: ResourceWizard.expression.tooltip.expression
 
-CapabilityStep.capability.read.tooltip=Tooltip
-CapabilityStep.capability.update.tooltip=Tooltip
-CapabilityStep.capability.create.tooltip=Tooltip
-CapabilityStep.capability.delete.tooltip=Tooltip
-CapabilityStep.capability.liveSync.tooltip=Tooltip
-CapabilityStep.capability.testConnection.tooltip=Tooltip
-CapabilityStep.capability.activation.tooltip=Tooltip
-CapabilityStep.capability.credentials.tooltip=Tooltip
-CapabilityStep.capability.script.tooltip=Tooltip
+CapabilityStep.capability.read.tooltip=TODO: CapabilityStep.capability.read.tooltip
+CapabilityStep.capability.update.tooltip=TODO: CapabilityStep.capability.update.tooltip
+CapabilityStep.capability.create.tooltip=TODO: CapabilityStep.capability.create.tooltip
+CapabilityStep.capability.delete.tooltip=TODO: CapabilityStep.capability.delete.tooltip
+CapabilityStep.capability.liveSync.tooltip=TODO: CapabilityStep.capability.liveSync.tooltip
+CapabilityStep.capability.testConnection.tooltip=TODO: CapabilityStep.capability.testConnection.tooltip
+CapabilityStep.capability.activation.tooltip=TODO: CapabilityStep.capability.activation.tooltip
+CapabilityStep.capability.credentials.tooltip=TODO: CapabilityStep.capability.credentials.tooltip
+CapabilityStep.capability.script.tooltip=TODO: CapabilityStep.capability.script.tooltip
 
-CapabilityStep.activation.tooltip.enabled=Tooltip
-CapabilityStep.activation.tooltip.returnedByDefault=Tooltip
-CapabilityStep.activation.tooltip.ignoreAttribute=Tooltip
-CapabilityStep.activation.tooltip.attributeName=Tooltip
-CapabilityStep.activation.tooltip.enableList=Tooltip
-CapabilityStep.activation.tooltip.disableList=Tooltip
-CapabilityStep.activation.tooltip.validFromEnabled=Tooltip
-CapabilityStep.activation.tooltip.validFromReturned=Tooltip
-CapabilityStep.activation.tooltip.validToEnabled=Tooltip
-CapabilityStep.activation.tooltip.validToReturned=Tooltip
+CapabilityStep.activation.tooltip.enabled=TODO: CapabilityStep.activation.tooltip.enabled
+CapabilityStep.activation.tooltip.returnedByDefault=TODO: CapabilityStep.activation.tooltip.returnedByDefault
+CapabilityStep.activation.tooltip.ignoreAttribute=TODO: CapabilityStep.activation.tooltip.ignoreAttribute
+CapabilityStep.activation.tooltip.attributeName=TODO: CapabilityStep.activation.tooltip.attributeName
+CapabilityStep.activation.tooltip.enableList=TODO: CapabilityStep.activation.tooltip.enableList
+CapabilityStep.activation.tooltip.disableList=TODO: CapabilityStep.activation.tooltip.disableList
+CapabilityStep.activation.tooltip.validFromEnabled=TODO: CapabilityStep.activation.tooltip.validFromEnabled
+CapabilityStep.activation.tooltip.validFromReturned=TODO: CapabilityStep.activation.tooltip.validFromReturned
+CapabilityStep.activation.tooltip.validToEnabled=TODO: CapabilityStep.activation.tooltip.validToEnabled
+CapabilityStep.activation.tooltip.validToReturned=TODO: CapabilityStep.activation.tooltip.validToReturned
 
-CapabilityStep.script.tooltip.enabled=Tooltip
-CapabilityStep.script.tooltip.onConnector=Tooltip
-CapabilityStep.script.tooltip.onResource=Tooltip
+CapabilityStep.script.tooltip.enabled=TODO: CapabilityStep.script.tooltip.enabled
+CapabilityStep.script.tooltip.onConnector=TODO: CapabilityStep.script.tooltip.onConnector
+CapabilityStep.script.tooltip.onResource=TODO: CapabilityStep.script.tooltip.onResource
 
-CapabilityStep.credentials.tooltip.enabled=Tooltip
-CapabilityStep.credentials.tooltip.passEnabled=Tooltip
-CapabilityStep.credentials.tooltip.passReturned=Tooltip
+CapabilityStep.credentials.tooltip.enabled=TODO: CapabilityStep.credentials.tooltip.enabled
+CapabilityStep.credentials.tooltip.passEnabled=TODO: CapabilityStep.credentials.tooltip.passEnabled
+CapabilityStep.credentials.tooltip.passReturned=TODO: CapabilityStep.credentials.tooltip.passReturned
 
-QNameEditor.tooltip.attribute=Tooltip
-QNameEditor.tooltip.namespace=Tooltip
+QNameEditor.tooltip.attribute=TODO: QNameEditor.tooltip.attribute
+QNameEditor.tooltip.namespace=TODO: QNameEditor.tooltip.namespace
 
