--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -259,8 +259,8 @@
             </dependency>
             <dependency>
                 <groupId>net.sf.saxon</groupId>
-                <artifactId>saxonhe</artifactId>
-                <version>9.3.1</version>
+                <artifactId>Saxon-HE</artifactId>
+                <version>9.5.1-6</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.cxf</groupId>
