--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -405,7 +405,7 @@
             <dependency>
                 <groupId>org.forgerock.openicf.connectors</groupId>
                 <artifactId>ldap-connector</artifactId>
-                <version>1.1.1.em262</version>
+                <version>1.4.1.0-SNAPSHOT</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.forgerock.openicf.framework</groupId>
