--- a/testing/longtest/src/test/resources/logging.properties
+++ b/testing/longtest/src/test/resources/logging.properties
@@ -4,7 +4,7 @@ java.util.logging.ConsoleHandler.level=FINEST
 
 java.util.logging.FileHandler.level=ALL
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
-java.util.logging.FileHandler.pattern=target/test.log
+java.util.logging.FileHandler.pattern=target/test1.log
 
 .level=ALL
 
