--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -486,8 +486,8 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>org.forgerock.openicf.connectors</groupId>
-            <artifactId>csvfile-connector</artifactId>
+            <groupId>com.evolveum.polygon</groupId>
+            <artifactId>connector-csvfile</artifactId>
             <scope>runtime</scope>
         </dependency>
         <!-- end connectors -->
