--- a/model/model-impl/pom.xml
+++ b/model/model-impl/pom.xml
@@ -210,8 +210,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.forgerock.openicf.connectors</groupId>
-			<artifactId>databasetable-connector</artifactId>
+        	<groupId>com.evolveum.polygon</groupId>
+            <artifactId>connector-databasetable</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
