--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -381,15 +381,9 @@
                 <version>${connid.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.forgerock.openicf.connectors</groupId>
-                <artifactId>databasetable-connector</artifactId>
-                <version>1.1.0.em12</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.forgerock.openicf.framework</groupId>
-                        <artifactId>connector-framework</artifactId>
-                    </exclusion>
-                </exclusions>
+            	<groupId>com.evolveum.polygon</groupId>
+                <artifactId>connector-databasetable</artifactId>
+                <version>1.4.0.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.evolveum.polygon</groupId>
