--- a/provisioning/provisioning-impl/pom.xml
+++ b/provisioning/provisioning-impl/pom.xml
@@ -155,8 +155,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.forgerock.openicf.connectors</groupId>
-			<artifactId>databasetable-connector</artifactId>
+        	<groupId>com.evolveum.polygon</groupId>
+            <artifactId>connector-databasetable</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
