Fixing conntest profile

--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -864,6 +864,20 @@
 				</plugins>
 			</build>
 		</profile>
+		<profile>
+			<id>conntest</id>
+			<build>
+				<plugins>
+					<plugin>
+					  <!-- Skip all tests by default. We only want selected tests to run. -->
+					  <artifactId>maven-surefire-plugin</artifactId>
+					  <configuration>
+					    <skip>true</skip>
+					  </configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
     </profiles>
     <dependencies>
         <dependency>
