Fixing export of shadows on page shadow details.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageAccounts.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageAccounts.properties
@@ -47,6 +47,7 @@ pageAccounts.message.resourceNotSelected=Resource not selected. Please select a 
 PageAccounts.message.ownerNotFound=Could not found owner for shadow with oid {0}.
 PageAccounts.message.cantShowOwner=Can't show details of owner.
 PageAccounts.message.success.clearExport=Export folder was cleared successfully
+PageAccounts.message.success.export=Export was successful. Exported file: {0}.
 ShadowKindType.ACCOUNT=Account
 ShadowKindType.ENTITLEMENT=Entitlement
 ShadowKindType.GENERIC=Generic
