PAsswordSecurity Questions Merge

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/component/menu/top/UserMenuPanel_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/component/menu/top/UserMenuPanel_en_US.utf8.properties
@@ -2,3 +2,5 @@
 UserMenuPanel.editProfile=Edit profile
 UserMenuPanel.logout=Log out
 UserMenuPanel.resetPasswords=Reset passwords
+UserMenuPanel.editPasswordQuestions=Password questions
+
