--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/login/PageLogin_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/login/PageLogin_en_US.utf8.properties
@@ -3,3 +3,4 @@ PageLogin.password=Password
 PageLogin.signIn=Sign in
 PageLogin.username=Username
 page.title=Login
+PageLogin.forgetPassword=Forget Password
