--- a/gui/admin-gui-tr-TR/src/main/resources/com/evolveum/midpoint/web/component/menu/top/UserMenuPanel_tr_TR.utf8.properties
+++ b/gui/admin-gui-tr-TR/src/main/resources/com/evolveum/midpoint/web/component/menu/top/UserMenuPanel_tr_TR.utf8.properties
@@ -2,3 +2,4 @@
 UserMenuPanel.editProfile=Profil 
 UserMenuPanel.logout=Çıkış yap
 UserMenuPanel.resetPasswords=Şifre Değiştir
+UserMenuPanel.editPasswordQuestions=Şifre Sorularım
