--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -202,6 +202,11 @@
             <artifactId>admin-gui-en-US</artifactId>
             <version>3.1-SNAPSHOT</version>
         </dependency>
+           <dependency>
+            <groupId>com.evolveum.midpoint.gui</groupId>
+            <artifactId>admin-gui-tr-TR</artifactId>
+            <version>3.1-SNAPSHOT</version>
+        </dependency>
 	    <!--<dependency>-->
             <!--<groupId>com.evolveum.midpoint.gui</groupId>-->
             <!--<artifactId>admin-gui-sk-SK</artifactId>-->
