Resource wizard tooltips. Removing redundant kindDefault.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/WizardStep.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/WizardStep.properties
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2010-2013 Evolveum
+# Copyright (c) 2010-2014 Evolveum
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -17,24 +17,23 @@
 WizardStep.title=
 SchemaHandlingStep.message.validationError=Inserted objectClass value: '{0}' is not valid. Please provide valid objectClass value.
 
-SchemaStep.tooltip.kind=TODO: SchemaStep.tooltip.kind
-SchemaStep.tooltip.intent=TODO: SchemaStep.tooltip.intent
-SchemaStep.tooltip.nativeObjectClass=TODO: SchemaStep.tooltip.nativeObjectClass
-SchemaStep.tooltip.isDefault=TODO: SchemaStep.tooltip.isDefault
-SchemaStep.tooltip.isKindDefault=TODO: SchemaStep.tooltip.isKindDefault
+SchemaStep.tooltip.kind=Kind specified what this object is, whether it is account, entitlement or something else.
+SchemaStep.tooltip.intent=Intent specifies what midPoint should do with the object. Intent sorts objects of the same kind into several categories. Objects with different intents may be handled differently by midPoint.
+SchemaStep.tooltip.nativeObjectClass=Object class name how it is natively known by the resource (or the connector).
+SchemaStep.tooltip.isDefault=If set to true then this definition is the default for its kind. I.e. if no intent is explicitly specified then this definition will be used.
 
-SchemaHandlingStep.tooltip.kind=TODO: SchemaHandlingStep.tooltip.kind
-SchemaHandlingStep.tooltip.intent=TODO: SchemaHandlingStep.tooltip.intent
-SchemaHandlingStep.tooltip.default=TODO: SchemaHandlingStep.tooltip.default
-SchemaHandlingStep.tooltip.dependency=TODO: SchemaHandlingStep.tooltip.dependency
-SchemaHandlingStep.tooltip.objectClass=TODO: SchemaHandlingStep.tooltip.objectClass
-SchemaHandlingStep.tooltip.attributes=TODO: SchemaHandlingStep.tooltip.attributes
-SchemaHandlingStep.tooltip.associations=TODO: SchemaHandlingStep.tooltip.associations
-SchemaHandlingStep.tooltip.assignmentPolicyRef=TODO: SchemaHandlingStep.tooltip.assignmentPolicyRef
-SchemaHandlingStep.tooltip.iteration=TODO: SchemaHandlingStep.tooltip.iteration
-SchemaHandlingStep.tooltip.protected=TODO: SchemaHandlingStep.tooltip.protected
-SchemaHandlingStep.tooltip.activation=TODO: SchemaHandlingStep.tooltip.activation
-SchemaHandlingStep.tooltip.credentials=TODO: SchemaHandlingStep.tooltip.credentials
+SchemaHandlingStep.tooltip.kind=Kind specified what this object is, whether it is account, entitlement or something else.
+SchemaHandlingStep.tooltip.intent=Intent specifies what midPoint should do with the object. Intent sorts objects of the same kind into several categories. Objects with different intents may be handled differently by midPoint.
+SchemaHandlingStep.tooltip.default=If set to true then this definition is the default for its kind. I.e. if no intent is explicitly specified then this definition will be used.
+SchemaHandlingStep.tooltip.dependency=Dependencies are object types that has to be processed before this object types is processed. I.e. this object type depends on them. The object types on which this object type depends will be provisioned before this object type. Dependencies are used to impose ordering into provisioning operations.
+SchemaHandlingStep.tooltip.objectClass=Object class from the schema that will be used to construct instances of this object type.
+SchemaHandlingStep.tooltip.attributes=Definitions how individual attributes are to be handled. Each definition may contain inbound/outbound mappings, attribute limitations, etc.
+SchemaHandlingStep.tooltip.associations=Definitions how entitlement associations are to be handled.
+SchemaHandlingStep.tooltip.assignmentPolicyRef=Assignment policy specifies how strictly are the assignments enforced. None: the assignments are not enforced at all; Positive: assignments only add values (never substract); Relative: only changes are propagated, existing values are left as they are; Full: everything is strictly enforced (both changed and existing values).
+SchemaHandlingStep.tooltip.iteration=Iteratively find values for unique attributes such as identifiers. MidPoint will try several times to find a unique value for such attributes. 
+SchemaHandlingStep.tooltip.protected=Specification of protected instances of this object type. MidPoint can see protected instances but they cannot be touched. Any attempt to modify them will fail. This is used to protect emergency administration accounts such as "root" or "administrator".
+SchemaHandlingStep.tooltip.activation=Definition how to map activation states (enabled/disabled/archived) and dates (validity from and to).
+SchemaHandlingStep.tooltip.credentials=Definition how to handle credentials such as passwords.
 
 SchemaHandlingStep.dependency.tooltip.order=TODO: SchemaHandlingStep.dependency.tooltip.order
 SchemaHandlingStep.dependency.tooltip.strictness=TODO: SchemaHandlingStep.dependency.tooltip.strictness
