--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/WizardStep.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/WizardStep.properties
@@ -35,23 +35,23 @@ SchemaHandlingStep.tooltip.protected=Specification of protected instances of thi
 SchemaHandlingStep.tooltip.activation=Definition how to map activation states (enabled/disabled/archived) and dates (validity from and to).
 SchemaHandlingStep.tooltip.credentials=Definition how to handle credentials such as passwords.
 
-SchemaHandlingStep.dependency.tooltip.order=TODO: SchemaHandlingStep.dependency.tooltip.order
-SchemaHandlingStep.dependency.tooltip.strictness=TODO: SchemaHandlingStep.dependency.tooltip.strictness
-SchemaHandlingStep.dependency.tooltip.kind=TODO: SchemaHandlingStep.dependency.tooltip.kind
-SchemaHandlingStep.dependency.tooltip.intent=TODO: SchemaHandlingStep.dependency.tooltip.intent
-SchemaHandlingStep.dependency.tooltip.resourceRef=TODO: SchemaHandlingStep.dependency.tooltip.resourceRef
+SchemaHandlingStep.dependency.tooltip.order=Normally zero. Can specify an integer that determines the ordering of dependencies that form a cycle and could not be otherwise be resolved (a.k.a. high-order dependencies). 
+SchemaHandlingStep.dependency.tooltip.strictness=Specifies how strictly will be the dependency resolved. Lax: if the dependency is not there continue as normal (only used to impose operation ordering); Relaxed: refuse to do operation unless the dependency is tried first, but if that fails then continue anyway; Strict: proceed only is the dependency is tried first and it succeeds. 
+SchemaHandlingStep.dependency.tooltip.kind=Kind of the object on which we depend.
+SchemaHandlingStep.dependency.tooltip.intent=Intent of the object on which we depend.
+SchemaHandlingStep.dependency.tooltip.resourceRef=Resource on which we depend.
 
-SchemaHandlingStep.attribute.tooltip.reference=TODO: SchemaHandlingStep.attribute.tooltip.reference
-SchemaHandlingStep.attribute.tooltip.allow=TODO: SchemaHandlingStep.attribute.tooltip.allow
-SchemaHandlingStep.attribute.tooltip.limitations=TODO: SchemaHandlingStep.attribute.tooltip.limitations
+SchemaHandlingStep.attribute.tooltip.reference=Name of the attribute to configure. All the settings and mappings below apply to this attribute.
+SchemaHandlingStep.attribute.tooltip.allow=If checked allows to specify an attribute which is not in the original resource schema. This can be used to fix faulty connectors that do not provide a complete resource schema, which hides some attributes, etc.
+SchemaHandlingStep.attribute.tooltip.limitations=Specify attribute limitations such as multiplicity, ability to read or write it, etc.
 SchemaHandlingStep.attribute.tooltip.exclusiveStrong=TODO: SchemaHandlingStep.attribute.tooltip.exclusiveStrong
-SchemaHandlingStep.attribute.tooltip.tolerant=TODO: SchemaHandlingStep.attribute.tooltip.tolerant
-SchemaHandlingStep.attribute.tooltip.tolerantVP=TODO: SchemaHandlingStep.attribute.tooltip.tolerantVP
-SchemaHandlingStep.attribute.tooltip.intolerantVP=TODO: SchemaHandlingStep.attribute.tooltip.intolerantVP
-SchemaHandlingStep.attribute.tooltip.fetchStrategy=TODO: SchemaHandlingStep.attribute.tooltip.fetchStrategy
-SchemaHandlingStep.attribute.tooltip.matchingRule=TODO: SchemaHandlingStep.attribute.tooltip.matchingRule
-SchemaHandlingStep.attribute.tooltip.outbound=TODO: SchemaHandlingStep.attribute.tooltip.outbound
-SchemaHandlingStep.attribute.tooltip.inbound=TODO: SchemaHandlingStep.attribute.tooltip.inbound
+SchemaHandlingStep.attribute.tooltip.tolerant=Tolerant attributes tolerate values that are set outside of midPoint. Non-tolerant attributes will only allow values that are defined in midPoint (e.g. by resource or role mappings).
+SchemaHandlingStep.attribute.tooltip.tolerantVP=A value that matches this pattern will be tolerated. I.e. it will remain as the attribute value even if it is not a result of midPoint processing (mappings).
+SchemaHandlingStep.attribute.tooltip.intolerantVP=A value that matches this pattern will NOT be tolerated. I.e. it will be erased from the attribute value even if it is not a result of midPoint processing (mappings).
+SchemaHandlingStep.attribute.tooltip.fetchStrategy=How to fetch the attribute when it is needed. Implicit: the attribute is returned by default, it does not need to be requested; Explicit: the attribute is not returned by default, always request it explicitly.
+SchemaHandlingStep.attribute.tooltip.matchingRule=A rule that determines if two attribute values have the same meaning. E.g. setting this to 'stringIgnoreCase' will make this attribute efficiently case insensitive.
+SchemaHandlingStep.attribute.tooltip.outbound=Outbound mappings map values from midPoint (usually a user) to the resource (usually an account).
+SchemaHandlingStep.attribute.tooltip.inbound=Inbound mappings map values from the resource (usually an account) to the midPoint (usually a user).
 
 SchemaHandlingStep.association.tooltip.intent=TODO: SchemaHandlingStep.association.tooltip.intent
 SchemaHandlingStep.association.tooltip.direction=TODO: SchemaHandlingStep.association.tooltip.direction
