--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/WizardStep.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/WizardStep.properties
@@ -44,7 +44,7 @@ SchemaHandlingStep.dependency.tooltip.resourceRef=Resource on which we depend.
 SchemaHandlingStep.attribute.tooltip.reference=Name of the attribute to configure. All the settings and mappings below apply to this attribute.
 SchemaHandlingStep.attribute.tooltip.allow=If checked allows to specify an attribute which is not in the original resource schema. This can be used to fix faulty connectors that do not provide a complete resource schema, which hides some attributes, etc.
 SchemaHandlingStep.attribute.tooltip.limitations=Specify attribute limitations such as multiplicity, ability to read or write it, etc.
-SchemaHandlingStep.attribute.tooltip.exclusiveStrong=TODO: SchemaHandlingStep.attribute.tooltip.exclusiveStrong
+SchemaHandlingStep.attribute.tooltip.exclusiveStrong=When set to false then both strong and normal mapping values are merged to produce the final set of values. When set to true only strong values are used if there is at least one strong mapping. Normal values are used if there is no strong mapping.
 SchemaHandlingStep.attribute.tooltip.tolerant=Tolerant attributes tolerate values that are set outside of midPoint. Non-tolerant attributes will only allow values that are defined in midPoint (e.g. by resource or role mappings).
 SchemaHandlingStep.attribute.tooltip.tolerantVP=A value that matches this pattern will be tolerated. I.e. it will remain as the attribute value even if it is not a result of midPoint processing (mappings).
 SchemaHandlingStep.attribute.tooltip.intolerantVP=A value that matches this pattern will NOT be tolerated. I.e. it will be erased from the attribute value even if it is not a result of midPoint processing (mappings).
@@ -53,34 +53,34 @@ SchemaHandlingStep.attribute.tooltip.matchingRule=A rule that determines if two 
 SchemaHandlingStep.attribute.tooltip.outbound=Outbound mappings map values from midPoint (usually a user) to the resource (usually an account).
 SchemaHandlingStep.attribute.tooltip.inbound=Inbound mappings map values from the resource (usually an account) to the midPoint (usually a user).
 
-SchemaHandlingStep.association.tooltip.intent=TODO: SchemaHandlingStep.association.tooltip.intent
-SchemaHandlingStep.association.tooltip.direction=TODO: SchemaHandlingStep.association.tooltip.direction
-SchemaHandlingStep.association.tooltip.associationAttribute=TODO: SchemaHandlingStep.association.tooltip.associationAttribute
-SchemaHandlingStep.association.tooltip.valueAttribute=TODO: SchemaHandlingStep.association.tooltip.valueAttribute
-SchemaHandlingStep.association.tooltip.kind=TODO: SchemaHandlingStep.association.tooltip.kind
-SchemaHandlingStep.association.tooltip.explicitRefIntegrity=TODO: SchemaHandlingStep.association.tooltip.explicitRefIntegrity
+SchemaHandlingStep.association.tooltip.kind=Kind of the association target object type. This is usually "entitlement". Target kind and intent identify an object type which is association target, e.g. a group, privilege, role, etc.
+SchemaHandlingStep.association.tooltip.intent=Intent of the association target object type. Target kind and intent identify an object type which is association target, e.g. a group, privilege, role, etc.
+SchemaHandlingStep.association.tooltip.direction=Defines the direction of the association. Object-to-subject: Object (e.g. group) has an attribute that contains identifier of the subject (e.g. account); Subject-to-object: Subject (e.g. account) has an attribute that contains identifier of the object (e.g. group).
+SchemaHandlingStep.association.tooltip.associationAttribute=Name of the attribute that "holds" the association. I.e. an attribute which contains the identifier of the associated object. This is usually an attribute such as "memeber", "groups", "roles", etc. In subject-to-object associations this is an attribute of a subject (e.g. account attribute "groups"). In object-to-subject associations this is an attribute of an object (e.g. group attribute "members").
+SchemaHandlingStep.association.tooltip.valueAttribute=Name of the attribute that is the source of a value for the association. The value of this attribute will be taken and stored into the association attribute to form an association. This is usually an attribute that contains an identifier or name such as "uid", "id", "name", etc. In subject-to-object associations this is an attribute of an object (e.g. group). In object-to-subject associations this is an attribute of a subject (e.g. account).
+SchemaHandlingStep.association.tooltip.explicitRefIntegrity=Explicit referential integrity. If set to false then midPoint assumes that the resource implements referential integrity. E.g. midPoint assumes that the resource automatically updates the association identifiers if an account is renamed and midPoint does not need to do anything. If set to true then midPoint will do referential integrity explicitly. In this case midPoint will explicitly update the association attributes if an account is renamed.
 
-SchemaHandlingStep.iteration.tooltip.maxIteration=TODO: SchemaHandlingStep.iteration.tooltip.maxIteration
+SchemaHandlingStep.iteration.tooltip.maxIteration=Maximum number of iterations to try. The operation will end with a failure if the maximum number of iterations is tried without any success.
 SchemaHandlingStep.iteration.tooltip.variable=TODO: SchemaHandlingStep.iteration.tooltip.variable
 SchemaHandlingStep.iteration.tooltip.returnMultiplicity=TODO: SchemaHandlingStep.iteration.tooltip.returnMultiplicity
 
-SchemaHandlingStep.activation.tooltip.fetchStrategy=TODO: SchemaHandlingStep.activation.tooltip.fetchStrategy
-SchemaHandlingStep.activation.tooltip.outbound=TODO: SchemaHandlingStep.activation.tooltip.outbound
-SchemaHandlingStep.activation.tooltip.inbound=TODO: SchemaHandlingStep.activation.tooltip.inbound
+SchemaHandlingStep.activation.tooltip.fetchStrategy=How to fetch the attribute when it is needed. Implicit: the attribute is returned by default, it does not need to be requested; Explicit: the attribute is not returned by default, always request it explicitly.
+SchemaHandlingStep.activation.tooltip.outbound=Outbound mappings map values from midPoint (usually a user) to the resource (usually an account).
+SchemaHandlingStep.activation.tooltip.inbound=Inbound mappings map values from the resource (usually an account) to the midPoint (usually a user).
 
-SchemaHandlingStep.credentials.tooltip.fetchStrategy=TODO: SchemaHandlingStep.credentials.tooltip.fetchStrategy
-SchemaHandlingStep.credentials.tooltip.outbound=TODO: SchemaHandlingStep.credentials.tooltip.outbound
-SchemaHandlingStep.credentials.tooltip.inbound=TODO: SchemaHandlingStep.credentials.tooltip.inbound
-SchemaHandlingStep.credentials.tooltip.passwordPolicyRef=TODO: SchemaHandlingStep.credentials.tooltip.passwordPolicyRef
+SchemaHandlingStep.credentials.tooltip.fetchStrategy=How to fetch the credentials value when it is needed. Implicit: the value is returned by default, it does not need to be requested; Explicit: the value is not returned by default, always request it explicitly.
+SchemaHandlingStep.credentials.tooltip.outbound=Outbound mappings map values from midPoint (usually a user) to the resource (usually an account).
+SchemaHandlingStep.credentials.tooltip.inbound=Inbound mappings map values from the resource (usually an account) to the midPoint (usually a user).
+SchemaHandlingStep.credentials.tooltip.passwordPolicyRef=Password policy to apply to this credential. This setting overrides other settings, e.g. default password policy defined in system configuration. If no password policy is defined here then the usual default will be used.
 
 SchemaHandlingStep.protected.tooltip.name=TODO: SchemaHandlingStep.protected.tooltip.name
 SchemaHandlingStep.protected.tooltip.uid=TODO: SchemaHandlingStep.protected.tooltip.uid
 SchemaHandlingStep.protected.tooltip.filter=TODO: SchemaHandlingStep.protected.tooltip.filter
 SchemaHandlingStep.tooltip.filterClause=TODO: SchemaHandlingStep.tooltip.filterClause
 
-SchemaHandlingStep.limitations.tooltip.layers=TODO: SchemaHandlingStep.limitations.tooltip.layers
-SchemaHandlingStep.limitations.tooltip.propertyAccess=TODO: SchemaHandlingStep.limitations.tooltip.propertyAccess
-SchemaHandlingStep.limitations.tooltip.other=TODO: SchemaHandlingStep.limitations.tooltip.other
+SchemaHandlingStep.limitations.tooltip.layers=System layers to which this limitation applies. Sometimes the limitation does not apply equally to all the layers. E.g. the attribute may be formally read-write but we want it to be only presented as read-only by the user interface and change it only through mappings. In such a case the read-only limitation applies only to "presentation" layer.
+SchemaHandlingStep.limitations.tooltip.propertyAccess=The type of access which is allowed or denied.
+SchemaHandlingStep.limitations.tooltip.other=TODO: REMOVE THIS TOOLTIP
 
 SchemaHandlingStep.mapping.tooltip.authoritative=TODO: SchemaHandlingStep.mapping.tooltip.authoritative
 SchemaHandlingStep.mapping.tooltip.exclusive=TODO: SchemaHandlingStep.mapping.tooltip.exclusive
