--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAssociationEditor.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAssociationEditor.properties
@@ -15,8 +15,8 @@
 #
 ResourceAssociationEditor.label.edit=Edit '{0}' association
 ResourceAssociationEditor.label.new=Create new association
-ResourceAssociationEditor.label.kind=Kind
-ResourceAssociationEditor.label.intent=Intent
+ResourceAssociationEditor.label.kind=Target kind
+ResourceAssociationEditor.label.intent=Target intent
 ResourceAssociationEditor.label.direction=Direction
 ResourceAssociationEditor.label.associationAttribute=Association attribute
 ResourceAssociationEditor.label.valueAttribute=Value attribute
